# Humanlike-Automation

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PUBLISH_GUIDE.md  README.md  README_PUBLIC.md  STEALTH_SETUP.md  __init__.py  apikeys.txt  db copy.py  db.py  db_config.json_local  publish_package.bat  publish_package.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  test_imports.py  test_stealth_quick.py  ts.py  utils.py  webdriver.py  webpagehandler.py  wt_scrapydata copy.py  wt_scrapydata.py  xpaths_config.json
OLD/: app.py  browsersessionmanager copy.py  db_old.py  main copy 2.py  main copy.py  models.py  screen_logic copy.py  services.py  telegram_bot_handler copy.py  test_squadron_service.py  testapi.py  ts.py  webpagehandler copy.py  webpagehandler.py  wt_scrapydata copy.py  wt_scrapydata.py
OLD/app/: main.py
OLD/app/warthunder/: models.py  services.py
OLD/bots/warthunder/: wt_scrapydata.py
app/: database.py  main.py  models.py  services.py
app/warthunder/: api.py  database.py  db_config.json  schemas.py  services.py
botinfrastructure/: __init__.py  ai_handler.py  browserhandler.py  browsersessionmanager.py  config_manager.py  database_handler.py  db_config.json  main.py  portable_browser.py  requirements.txt  services.py  serviceshandler.py  telegram_bot_handler.py  test_database.py  utility.py  webdriver.py  webpageanalyzer.py  webpagehandler.py  wt_data.py
bots/warthunder/: db.py  db_config.json
examples/: README.md  demo_simple.py  quick_test.py  stealth_mode_demo.py  youtube_human_behavior.py  youtube_random_player.py
tests/: telegram.py  test_browserhandler.py  webpageanalyzer.py
