[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "humanlike-automation"
dynamic = ["version", "readme"]
description = "Human-like browser automation with stealth capabilities and anti-detection features"
authors = [
    {name = "Bot Infrastructure Team", email = "contact@botinfrastructure.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = [
    "selenium", "automation", "browser", "stealth", "anti-detection", 
    "web-scraping", "humanlike", "undetected", "chrome", "webdriver",
    "bot", "crawler", "testing", "web-automation", "bypass-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Selenium",
]
dependencies = [
    "selenium>=4.13.0",
    "undetected-chromedriver>=3.5.0",
    "webdriver-manager>=4.0.0",
    "fake-useragent>=2.0.0",
    "pyperclip>=1.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
stealth = [
    "undetected-chromedriver>=3.5.0",
    "selenium-stealth>=1.0.6",
]

[project.scripts]
humanlike-demo = "examples.demo_simple:main"

[project.urls]
Homepage = "https://github.com/humanlike-automation/humanlike-automation"
Documentation = "https://github.com/humanlike-automation/humanlike-automation#readme"
Repository = "https://github.com/humanlike-automation/humanlike-automation"
"Bug Tracker" = "https://github.com/humanlike-automation/humanlike-automation/issues"
Examples = "https://github.com/humanlike-automation/humanlike-automation/tree/main/examples"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "ARCHIVE*", "profilestest*", "portable_browser*"]

[tool.setuptools.package-data]
botinfrastructure = ["*.txt", "*.json"]
"*" = ["examples/*.py", "*.md", "*.json", ".env.example"]

[tool.setuptools.dynamic]
version = {attr = "botinfrastructure.__version__"}
readme = {file = ["README_PUBLIC.md"], content-type = "text/markdown"}

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
